# ardrone_gesture_control

./: CMakeLists.txt  README.md  package.xml
include/ardrone_gesture_control/: GamepadObserver.h  JoypadControl.h  JoypadOculusControl.h  JoypadOculusControlTactileFeedback.h  LeapMyoOculusDroneControl.h  LeapObserver.h  MyoObserver.h  OculusObserver.h
include/drone_control/: LeapObserver.h  MyoObserver.h  OculusObserver.h
launch/: ardrone.launch  asia_haptics_gesture_ctrl_demo.launch  asia_haptics_gesture_ctrl_tactile_feedback_demo.launch  asia_haptics_joypad_ctrl_tactile_feedback_demo.launch  asia_haptics_joypad_oculus_ctrl.launch  asia_haptics_joypad_oculus_ctrl_tactile_feedback_demo.launch  start_gamepad.launch  start_myo_leap_oculus.launch  start_myo_leap_oculus_no_travel.launch  start_oculus_gamepad.launch  start_oculus_gamepad_tactile_feedback.launch
scripts/: controllerInput.py
src/: GamepadObserver.cpp  JoypadControl.cpp  JoypadOculusControl.cpp  JoypadOculusControlTactileFeedback.cpp  LeapMyoOculusDroneControl.cpp  LeapObserver.cpp  MyoObserver.cpp  OculusObserver.cpp  joypad_control.cpp  joypad_oculus_control.cpp  joypad_oculus_control_tactile_feedback.cpp  leap_myo_oculus_advanced_control.cpp  leap_myo_oculus_control.cpp  leapmotion_testprint.cpp  myo_control.cpp  oculus_myo_control.cpp
